--- a/CSC3045-CS2-Frontend/CSC3045-CS2/Pages/Login.xaml
+++ b/CSC3045-CS2-Frontend/CSC3045-CS2/Pages/Login.xaml
@@ -13,7 +13,7 @@
         <TextBlock Name="PageTitle" Text="Login" Style="{StaticResource Title}" HorizontalAlignment="Center" Margin="0,10,0,25"/>
 
         <AdornerDecorator>
-            <TextBox Name="EmailTextBox" Style="{StaticResource DefaultTextBox}">
+            <TextBox Name="EmailTextBox" Style="{StaticResource DefaultTextBox}" HorizontalContentAlignment="Center">
                 <utility:WatermarkService.Watermark>
                     <TextBlock Style="{StaticResource Watermark}" HorizontalAlignment="Center" Margin="0,5,0,0" Name="EmailTextBlock">E-mail</TextBlock>
                 </utility:WatermarkService.Watermark>
@@ -21,7 +21,7 @@
         </AdornerDecorator>
 
         <AdornerDecorator Margin="0,12,0,0">
-            <PasswordBox Name="PasswordBox" Style="{StaticResource DefaultPasswordBox}">
+            <PasswordBox Name="PasswordBox" Style="{StaticResource DefaultPasswordBox}" HorizontalContentAlignment="Center">
                 <utility:WatermarkService.Watermark>
                     <TextBlock Style="{StaticResource Watermark}" HorizontalAlignment="Center" Margin="0,5,0,0"  Name="PasswordTextBlock" >Password</TextBlock>
                 </utility:WatermarkService.Watermark>
