--- a/CSC3045-CS2-Frontend/CSC3045-CS2/Resources/Styles/DatePicker.xaml
+++ b/CSC3045-CS2-Frontend/CSC3045-CS2/Resources/Styles/DatePicker.xaml
@@ -22,4 +22,14 @@
         </Setter>
     </Style>
 
+    <Style TargetType="{x:Type Calendar}" x:Key="TodayCalendar">
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate TargetType="{x:Type CalendarDateRange}">
+                    
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
+    </Style>
+    
 </ResourceDictionary>
