--- a/CSC3045-CS2-Frontend/CSC3045-CS2/Pages/ProjectDashboard.xaml
+++ b/CSC3045-CS2-Frontend/CSC3045-CS2/Pages/ProjectDashboard.xaml
@@ -1,4 +1,5 @@
-﻿<local:BasePage x:Class="CSC3045_CS2.Pages.ProjectDashboard"
+﻿<local:BasePage 
+      x:Class="CSC3045_CS2.Pages.ProjectDashboard"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -23,8 +24,9 @@
 
         <Grid>
             <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="*"/>
-                <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="125*"/>
+                <ColumnDefinition Width="96*"/>
+                <ColumnDefinition Width="29*"/>
             </Grid.ColumnDefinitions>
 
             <StackPanel Grid.Column="0" Margin="0,0,10,0">
@@ -112,7 +114,7 @@
                 </Grid>
             </StackPanel>
 
-            <StackPanel Grid.Column="1" Margin="10,0,0,0">
+            <StackPanel Grid.Column="1" Margin="10,0,0,0" Grid.ColumnSpan="2">
                 <Grid Visibility="{Binding Permissions.Manager, Converter={StaticResource BoolToVisConverter}}">
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="0.86*"/>
