--- a/CSC3045-CS2-Frontend/CSC3045-CS2/App.xaml
+++ b/CSC3045-CS2-Frontend/CSC3045-CS2/App.xaml
@@ -2,6 +2,7 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:CSC3045_CS2"
+             xmlns:utility="clr-namespace:CSC3045_CS2.Utility"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
         <ResourceDictionary>
@@ -17,6 +18,8 @@
                 <ResourceDictionary Source="Resources/Styles/Controllers.xaml"/>
             </ResourceDictionary.MergedDictionaries>
             <BooleanToVisibilityConverter x:Key="BoolToVisConverter"/>
+            <utility:BoolToHiddenConverter x:Key="BoolToHiddenConverter"/>
+            <utility:UserImagePathValueConverter x:Key="ImageConverter"/>
         </ResourceDictionary>
     </Application.Resources>
 </Application>
