--- a/CSC3045-CS2-Frontend/CSC3045-CS2/Pages/CreateTask.xaml
+++ b/CSC3045-CS2-Frontend/CSC3045-CS2/Pages/CreateTask.xaml
@@ -26,14 +26,14 @@
                     <RowDefinition Height="*"></RowDefinition>
                 </Grid.RowDefinitions>
                     <AdornerDecorator Margin="0,6,0,0" Grid.Row="0" >
-                        <TextBox Name="NameTextBox" Style="{StaticResource DefaultTextBox}">
+                    <TextBox Name="NameTextBox" MaxLength="50" Style="{StaticResource DefaultTextBox}">
                             <utility:WatermarkService.Watermark>
                                 <TextBlock Style="{StaticResource Watermark}" HorizontalAlignment="Center" Name="NameTextBlock">Name</TextBlock>
                             </utility:WatermarkService.Watermark>
                         </TextBox>
                     </AdornerDecorator>
                 <AdornerDecorator Margin="0,6,0,0" Grid.Row="1">
-                    <TextBox Name="DescriptionTextBox" Style="{StaticResource DefaultTextBox}">
+                    <TextBox Name="DescriptionTextBox" MaxLength="500" Style="{StaticResource DefaultTextBox}">
                         <utility:WatermarkService.Watermark>
                             <TextBlock Style="{StaticResource Watermark}" HorizontalAlignment="Center" Name="DescriptionTextBlock">Description</TextBlock>
                         </utility:WatermarkService.Watermark>
