--- a/CSC3045-CS2-Frontend/CSC3045-CS2/Pages/Register.xaml
+++ b/CSC3045-CS2-Frontend/CSC3045-CS2/Pages/Register.xaml
@@ -19,7 +19,7 @@
 
             <StackPanel Grid.Column="0">
                 <AdornerDecorator Margin="0,12,0,0">
-                    <TextBox Name="FirstnameTextBox" Style="{StaticResource DefaultTextBox}" PreviewTextInput="LetterOnlyTextBoxValidation" HorizontalContentAlignment="Center">
+                    <TextBox Name="FirstnameTextBox" MaxLength="35" Style="{StaticResource DefaultTextBox}" PreviewTextInput="LetterOnlyTextBoxValidation" HorizontalContentAlignment="Center">
                         <utility:WatermarkService.Watermark>
                             <TextBlock Style="{StaticResource Watermark}" HorizontalAlignment="Center" Margin="0,5,0,0" Name="FirstnameTextBlock">Firstname</TextBlock>
                         </utility:WatermarkService.Watermark>
@@ -27,7 +27,7 @@
                 </AdornerDecorator>
 
                 <AdornerDecorator Margin="0,12,0,0">
-                    <TextBox Name="SurnameTextBox" Style="{StaticResource DefaultTextBox}" PreviewTextInput="LetterOnlyTextBoxValidation" HorizontalContentAlignment="Center">
+                    <TextBox Name="SurnameTextBox" MaxLength="35" Style="{StaticResource DefaultTextBox}" PreviewTextInput="LetterOnlyTextBoxValidation" HorizontalContentAlignment="Center">
                         <utility:WatermarkService.Watermark>
                             <TextBlock Style="{StaticResource Watermark}" HorizontalAlignment="Center" Margin="0,5,0,0" Name="SurnameTextBlock">Surname</TextBlock>
                         </utility:WatermarkService.Watermark>
@@ -41,7 +41,7 @@
         </Grid>
 
         <AdornerDecorator Margin="0,12,0,0">
-            <TextBox Name="EmailTextBox" Style="{StaticResource DefaultTextBox}" HorizontalContentAlignment="Center">
+            <TextBox Name="EmailTextBox" MaxLength="255" Style="{StaticResource DefaultTextBox}" HorizontalContentAlignment="Center">
                 <utility:WatermarkService.Watermark>
                     <TextBlock Style="{StaticResource Watermark}" HorizontalAlignment="Center" Margin="0,5,0,0" Name="EmailTextBlock">E-mail</TextBlock>
                 </utility:WatermarkService.Watermark>
@@ -49,7 +49,7 @@
         </AdornerDecorator>
 
         <AdornerDecorator Margin="0,12,0,0">
-            <PasswordBox Name="PasswordTextBox" Style="{StaticResource DefaultPasswordBox}" HorizontalContentAlignment="Center">
+            <PasswordBox Name="PasswordTextBox" MaxLength="20" Style="{StaticResource DefaultPasswordBox}" HorizontalContentAlignment="Center">
                 <utility:WatermarkService.Watermark>
                     <TextBlock Style="{StaticResource Watermark}" HorizontalAlignment="Center" Margin="0,5,0,0" Name="PasswordTextBlock" >Password</TextBlock>
                 </utility:WatermarkService.Watermark>
@@ -57,7 +57,7 @@
         </AdornerDecorator>
 
         <AdornerDecorator Margin="0,12,0,0">
-            <PasswordBox Name="ConfirmPasswordTextBox" Style="{StaticResource DefaultPasswordBox}" ToolTip="Passwords Must Match" HorizontalContentAlignment="Center">
+            <PasswordBox Name="ConfirmPasswordTextBox" MaxLength="20" Style="{StaticResource DefaultPasswordBox}" ToolTip="Passwords Must Match" HorizontalContentAlignment="Center">
                 <utility:WatermarkService.Watermark>
                     <TextBlock Style="{StaticResource Watermark}" HorizontalAlignment="Center" Margin="0,5,0,0" Name="ConfirmPasswordTextBlock">Confirm Password</TextBlock>
                 </utility:WatermarkService.Watermark>
