--- a/CSC3045-CS2-Frontend/CSC3045-CS2/Pages/ProductBacklog.xaml
+++ b/CSC3045-CS2-Frontend/CSC3045-CS2/Pages/ProductBacklog.xaml
@@ -77,7 +77,7 @@
 
             <Button Grid.Column="2" Name="CreateStoryButton" Content="Create Story" Width="125"
                     Command="{Binding CreateStoryCommand}" Style="{StaticResource StandardButton}"
-                    Visibility="{Binding Permissions.ProductOwner, Converter={StaticResource BoolToVisConverter}}" Click="CreateStoryButton_Click"/>
+                    Visibility="{Binding Permissions.ProductOwner, Converter={StaticResource BoolToVisConverter}}"/>
         </Grid>
     </StackPanel>
 </local:BasePage>
