--- a/CSC3045-CS2-Frontend/CSC3045-CS2/Resources/Styles/Buttons.xaml
+++ b/CSC3045-CS2-Frontend/CSC3045-CS2/Resources/Styles/Buttons.xaml
@@ -51,4 +51,8 @@
         </Setter>
     </Style>
 
+    <Style TargetType="{x:Type Button}" x:Key="transButton">
+        <Setter Property="Background" Value="Transparent"/>
+    </Style>
+
 </ResourceDictionary>
