--- a/CSC3045-CS2-Frontend/CSC3045-CS2/Resources/Styles/Text.xaml
+++ b/CSC3045-CS2-Frontend/CSC3045-CS2/Resources/Styles/Text.xaml
@@ -20,6 +20,12 @@
         <Setter Property="Foreground" Value="White"/>
     </Style>
 
+    <Style TargetType="{x:Type TextBlock}" x:Key="GoldLabel">
+        <Setter Property="FontFamily" Value="{StaticResource LatoRegular}"/>
+        <Setter Property="FontSize" Value="16"/>
+        <Setter Property="Foreground" Value="Gold"/>
+    </Style>
+
     <Style TargetType="{x:Type TextBlock}" x:Key="ListBoxItemHeader">
         <Setter Property="FontFamily" Value="{StaticResource LatoBold}"/>
         <Setter Property="FontSize" Value="20"/>
